Creacion de ProfesorBean
Modificaciones en los XHTML y creacion de algunas clases java

--- a/vista/src/main/webapp/templates/menu.xhtml
+++ b/vista/src/main/webapp/templates/menu.xhtml
@@ -11,38 +11,40 @@
     </h:head>
 
     <h:body>
-        <h:form>
-            <div class="menu-container">
-                <div class="logo-container">
-                    <h:graphicImage library="images" name="escudo-actualizado-2022.png" styleClass="logo-img"/>
-                </div>
-
-                <div class="menu-title">
-                    <h:outputText value="Universidad Autónoma de Baja California" />
-                    <br/>
-                    <h:outputText value="Facultad de Ingeniería" style="font-weight:bold;" />
-                </div>
-
-                <div class="menu-logout">
-                    <h:commandLink action="login" styleClass="menu-item">
-                        <h:graphicImage library="images" name="cerrar_sesion.png" styleClass="icon"/> Cerrar Sesión
-                    </h:commandLink>
-                </div>
+        <div class="menu-container">
+            <!-- Logo -->
+            <div class="logo-container">
+                <h:graphicImage library="images" name="escudo-actualizado-2022.png" styleClass="logo-img"/>
             </div>
 
-            <div class="submenu-container">
-                <h:commandLink action="profesores" styleClass="menu-item">
-                    <h:graphicImage library="images" name="profesores.png" styleClass="icon"/> Profesores
-                </h:commandLink>
-
-                <h:commandLink action="unidades" styleClass="menu-item">
-                    <h:graphicImage library="images" name="consulta.png" styleClass="icon"/> Unidades de Aprendizaje
-                </h:commandLink>
-
-                <h:commandLink action="asignaciones" styleClass="menu-item">
-                    <h:graphicImage library="images" name="asignacion.png" styleClass="icon"/> Asignaciones
-                </h:commandLink>
+            <!-- Título -->
+            <div class="menu-title">
+                <h:outputText value="Universidad Autónoma de Baja California" />
+                <br/>
+                <h:outputText value="Facultad de Ingeniería" style="font-weight:bold;" />
             </div>
-        </h:form>
+
+            <!-- Botón de cerrar sesión -->
+            <div class="menu-logout">
+                <h:link outcome="/login" styleClass="menu-item">
+                    <h:graphicImage library="images" name="cerrar_sesion.png" styleClass="icon"/> Cerrar Sesión
+                </h:link>
+            </div>
+        </div>
+
+        <!-- Menú de navegación -->
+        <div class="submenu-container">
+            <h:link outcome="/profesores" styleClass="menu-item">
+                <h:graphicImage library="images" name="profesores.png" styleClass="icon"/> Profesores
+            </h:link>
+
+            <h:link outcome="/unidades" styleClass="menu-item">
+                <h:graphicImage library="images" name="consulta.png" styleClass="icon"/> Unidades de Aprendizaje
+            </h:link>
+
+            <h:link outcome="/asignaciones" styleClass="menu-item">
+                <h:graphicImage library="images" name="asignacion.png" styleClass="icon"/> Asignaciones
+            </h:link>
+        </div>
     </h:body>
 </html>
